# meu_data_engineering_roadmap

./: .gitignore  README.md
Bootcamp - SQL e Analytics/Aula 01-05/Northwind-SQL-Analytics/: README.md
Bootcamp - SQL e Analytics/Aula 06-10/Stored Procedured/: readme.md
Bootcamp - SQL e Analytics/Northwind-SQL-Analytics/relatorios/: 01_total_revenues_1997.sql  02_receitas_acumuladas_YTD.sql  06_top_10_produtos.sql  07_uk_clientes_pay_more_1000.sql
Intensivo Python/Modulo 01/: arquivos.py  typing_listas_dicionario.py
Intensivo Python/Modulo 02/aula_07/: desafio.py  exercicios.ipynb  pyproject.toml
Intensivo Python/Modulo 02/aula_09/: pyproject.toml
Intensivo Python/Modulo 02/aula_09/continuacao_aula08/: etl.py  pipeline.py
Intensivo Python/Modulo 02/aula_09/continuacao_aula08/utils/: log.py
Intensivo Python/Modulo 02/aula_09/exemplo_log/: exemplo_00.py
Intensivo Python/Modulo 03/: pyproject.toml
Intensivo Python/Modulo 03/Aula02/: usar_class.py
Intensivo Python/Modulo 03/Aula03 - Heranca_Polimorfismo/: README.md
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/: create_insert_operation.py  database.db  select_operation.py
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_16/: pyproject.toml
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_17/: exemplo_01.py  meubanco.db  pyproject.toml
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_18/: exemplo_001.py  pyproject.toml
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_19/: FastAPI_Documentation.txt  main.py  pyproject.toml
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_19/api/: database.py  models.py
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_20/: README.md  docker-compose.yml  pyproject.toml
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_20/backend/: crud.py  database.py  main.py  models.py  router.py  schemas.py
Intensivo Python/Modulo 04 - CRUD - Projeto_Portifolio/Aula_20/frontend/: app.py
bootcamp_cloud/ETL-Backup_Case/: .gitignore  README.md  access_key_bucket.txt  main.py  pyproject.toml
bootcamp_cloud/projetos/Athena_Glue/projeto_athena_glue/: README.md  pyproject.toml
bootcamp_cloud/projetos/Athena_Glue/projeto_athena_glue/projeto/: parquet_to_s3.py
bootcamp_cloud/projetos/athena_airflow/: .gitignore  README.md  pyproject.toml
bootcamp_cloud/projetos/lambda-api-rds-dynamo/: pyproject.toml
bootcamp_cloud/projetos/lambda-api-rds-dynamo/projeto_local/: README.md  pyproject.toml
bootcamp_cloud/projetos/lambda-api-rds-dynamo/projeto_local/dashboard/: dashboard.py  docker-compose.yaml
bootcamp_cloud/projetos/lambda-api-rds-dynamo/projeto_local/src/: .env-example  lambda_dynamoDB.py
bootcamp_cloud/projetos/projeto_athena_glue/: .gitignore  README.md
workshop_Docker/: README.md
workshop_Docker/streamlit/: Dockerfile  app.py
workshops/workshop_DBT/: README.md
workshops/workshop_DBT/dbt_bigquery/: README.md  pyproject.toml
workshops/workshop_DBT/dbt_bigquery/datawarehouse/: .gitignore  .user.yml  README.md  dbt_project.yml  keyfile.json  profiles.yml
workshops/workshop_DBT/dbt_bigquery/datawarehouse/models/staging/: __sources.yml
workshops/workshop_DBT/dbt_testes/: pyproject.toml
workshops/workshop_DBT/dbtcore-bigquery/: README.md  dbt_project.yml  pyproject.toml
workshops/workshop_Docker/streamlit_postgres/: docker-compose.yaml  pyproject.toml
workshops/workshop_Docker/streamlit_postgres/app/: app.py
workshops/workshop_airflow/: exemplo_00.py  pyproject.toml
workshops/workshop_briefer/projeto/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
workshops/workshop_briefer/projeto/initial/: northwind.sql
workshops/workshop_briefer/projeto/northwind/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
workshops/workshop_briefer/projeto/northwind/models/marts/: delivery.sql  delivery.yml  employees_territories.sql  employees_territories.yml  qtd_categories_country.sql  qtd_categories_country.yml
workshops/workshop_briefer/projeto/northwind/models/staging/: __sources.yml  stg_categories.sql  stg_categories.yml  stg_customers.sql  stg_customers.yml  stg_employee_territories.sql  stg_employee_territories.yml  stg_employees.sql  stg_employees.yml  stg_order_details.sql  stg_order_details.yml  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_products.yml  stg_region.sql  stg_region.yml  stg_shippers.sql  stg_shippers.yml  stg_suppliers.sql  stg_supppliers.yml  stg_territories.sql  stg_territories.yml  stg_us_states.sql  stg_us_states.yml
workshops/workshop_filas/Kafka/: README.md  pyproject.toml
workshops/workshop_filas/Kafka/consumer/: kafka_consumer.py  messages.csv
workshops/workshop_filas/Kafka/kafka-market-project_docker/: README.md  docker-compose.yaml
workshops/workshop_filas/Kafka/kafka-market-project_docker/consumer/: consumer.py
workshops/workshop_filas/Kafka/kafka-market-project_docker/dashboard/: dashboard.py
workshops/workshop_filas/Kafka/kafka-market-project_docker/producer/: producer.py
workshops/workshop_filas/Kafka/kafka-market-project_local/consumer/: consumer.py
workshops/workshop_filas/Kafka/kafka-market-project_local/dashboard/: dashboard.py
workshops/workshop_filas/Kafka/kafka-market-project_local/producer/: producer.py
workshops/workshop_filas/Kafka/producer/: kafka_producer.py
(+47 files in other folders)
