[tool.poetry]
name = "workshop-dbt"
version = "0.1.0"
description = ""
authors = ["Lucas-Sobreira <lucas-andrade2011@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.9"
dbt-bigquery = "^1.8.3"
pre-commit = "^4.0.1"
sqlfluff = "^3.2.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
